; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mips-tdep.c_mips_skip_prologue.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mips-tdep.c_mips_skip_prologue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @mips_skip_prologue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mips_skip_prologue(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i64 @after_prologue(i64 %5, i32* null)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* %4, align 8
  %12 = call i64 @max(i64 %10, i64 %11)
  store i64 %12, i64* %2, align 8
  br label %23

13:                                               ; preds = %1
  %14 = load i64, i64* %3, align 8
  %15 = call i64 @pc_is_mips16(i64 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %13
  %18 = load i64, i64* %3, align 8
  %19 = call i64 @mips16_skip_prologue(i64 %18)
  store i64 %19, i64* %2, align 8
  br label %23

20:                                               ; preds = %13
  %21 = load i64, i64* %3, align 8
  %22 = call i64 @mips32_skip_prologue(i64 %21)
  store i64 %22, i64* %2, align 8
  br label %23

23:                                               ; preds = %20, %17, %9
  %24 = load i64, i64* %2, align 8
  ret i64 %24
}

declare dso_local i64 @after_prologue(i64, i32*) #1

declare dso_local i64 @max(i64, i64) #1

declare dso_local i64 @pc_is_mips16(i64) #1

declare dso_local i64 @mips16_skip_prologue(i64) #1

declare dso_local i64 @mips32_skip_prologue(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
